# obsidian-borg

./: .gitignore  .otto.yml  CLAUDE.md  Cargo.toml  README.md  build.rs  obsidian-borg.example.yml  pricing.md
clients/bookmarklet/: README.md
clients/extension/: background.js  manifest.json  options.html  options.js  popup.html  popup.js  sign.sh
clients/hotkey/: README.md  obsidian-borg-capture.sh
crates/borg-core/: Cargo.toml
crates/borg-core/src/: config.rs  health.rs  lib.rs  logging.rs  types.rs
crates/borg-daemon/: Cargo.toml
crates/borg-daemon/src/: cli.rs  config.rs  jina.rs  main.rs  markdown.rs  pipeline.rs  routes.rs  transcription_client.rs  url_router.rs  youtube.rs
crates/borg-transcriber/: Cargo.toml  build.rs
crates/borg-transcriber/src/: cli.rs  config.rs  main.rs  routes.rs  transcribe.rs
deploy/: README.md  borg-daemon.service  borg-transcriber.service  obsidian-borg.service
docs/: obsidian-ingestion-ideas.md
docs/design/: 2026-03-06-browser-capture-clients.md  2026-03-06-chat-bot-ingestion.md  2026-03-06-simplify-single-crate.md  2026-03-06-smart-ingestion-pipeline.md  2026-03-06-workspace-architecture.md  2026-03-07-canonicalization-dedup-dashboard.md  2026-03-07-ntfy-mobile-ingestion.md  2026-03-16-direct-claude-vision.md  2026-03-16-obsidian-deep-links.md  2026-03-16-trace-id.md  2026-03-16-universal-content-ingestion.md  2026-03-17-content-type-expansion-and-quality-gates.md  2026-03-17-fabric-pattern-templating.md  2026-03-17-vault-v2-alignment.md  2026-03-18-reingest-content-key.md  2026-03-18-unified-telegram-notifications.md
examples/: telegram_test.rs
src/: assets.rs  audit.rs  backoff.rs  borg_log.rs  cli.rs  config.rs  dashboard.rs  discord.rs  error.rs  extraction.rs  fabric.rs  hygiene.rs  ledger.rs  lib.rs  logging.rs  main.rs  markdown.rs  migrate.rs  notify.rs  ntfy.rs  ocr.rs  pipeline.rs  quality.rs  router.rs  routes.rs  telegram.rs  trace.rs  transcription.rs  transcription_client.rs  types.rs  url_router.rs  youtube.rs
