[workspace]
members = [
  "crates/borg-core",
  "crates/borg-daemon",
  "crates/borg-transcriber",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
dirs = "6.0.0"
env_logger = "0.11.9"
eyre = "0.6.12"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }
borg-core = { path = "crates/borg-core" }
