[package]
name = "obsidian-borg"
version = "0.3.3"
edition = "2024"
build = "build.rs"

[dependencies]
axum = "0.8.8"
chrono = { version = "0.4.44", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
dirs = "6.0.0"
env_logger = "0.11.9"
eyre = "0.6.12"
log = "0.4.29"
reqwest = { version = "0.13.2", features = ["json", "multipart", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
thiserror = "2.0.12"
teloxide = { version = "0.17", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5.3"
url = "2.5.8"
shellexpand = "3.1.2"
tower-http = { version = "0.6.8", features = ["cors"] }

arboard = "3"
notify-rust = "4"
fs2 = "0.4.3"
tokio-stream = "0.1.18"
tokio-util = { version = "0.7.18", features = ["io"] }

[dependencies.serenity]
version = "0.12"
default-features = false
features = ["client", "gateway", "model", "rustls_backend"]

[dependencies.regex]
version = "1"

