[package]
name = "borg-daemon"
version.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
axum = "0.8.8"
borg-core = { workspace = true }
chrono = { version = "0.4.44", features = ["serde"] }
clap = { workspace = true }
colored = { workspace = true }
dirs = { workspace = true }
env_logger = { workspace = true }
eyre = { workspace = true }
log = { workspace = true }
reqwest = { version = "0.13.2", features = ["json", "multipart"] }
serde = { workspace = true }
serde_json = "1.0.149"
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = "0.5.3"
url = "2.5.8"
