[package]
name = "borg-transcriber"
version.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
borg-core = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
eyre = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
