[package]
name = "borg-transcriber"
version.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
axum = "0.8.8"
borg-core = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
eyre = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.149"
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = "0.5.3"
